@@ -170,7 +170,7 @@
 
 #if (ACE_LYNXOS_MAJOR >=5)
 // LynxOS 5.0 Additons
-#  define ACE_HAS_LYNXOS50_SIGNALS
+#  define ACE_HAS_CONSISTENT_SIGNAL_PROTOTYPES
 #  define ACE_HAS_NONCONST_INET_ADDR
 #  define ACE_LACKS_INET_ATON_PROTOTYPE
 #  define ACE_LACKS_SEMBUF_T
